welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
	if (ASpeed(speed, isBirthday)<60){
		return 0;
	}
	if (ASpeed(speed, isBirthday)== 61 ){
		return 1;
	}
	if (ASpeed(speed, isBirthday)== 80 ){
		return 1;
	}
	if (ASpeed(speed, isBirthday) > 61 && ASpeed(speed, isBirthday) < 80  ){
		return 1;
	}else{
		return 2;
	}
}


def ASpeed (speed:Int, isBirthday:Boolean) :Int = {
	while(!isBirthday){
		return speed;
	}
	while(isBirthday){
		return ( 5 + speed);
	}
}
